# sb-ogc-mcp

./: README.md  pyproject.toml
src/: ogc_mcp_server.py
