[project]
name = "sb-ogc-mcp"
version = "0.1.0"
description = "MCP server for Studio Bereikbaar OGC API — mobility data for NL"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.3.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
